--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,5 @@ testem.log
 .DS_Store
 Thumbs.db
 
-# miselanious C:Userssvisunodejsnpm-cache
+# Other miscellaneous C:Userssvisunodejsnpm-cache
 C:Userssvisuvnodejsnpm-cache/
